--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -1,5 +1,11 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Baloo Thambi 2', cursive;
+  font-family: 'Lato', sans-serif;
+}
+.margin-t-3 {
+  margin-top: 3rem;
+}
+.margin-b-3 {
+  margin-bottom: 3rem;
 }
