--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -1,67 +1,70 @@
-.friesImg.full-screen{
-    background-position: center;
-    background-attachment: fixed;
-    background-size: cover;
-    background-image: linear-gradient(
-        rgba(53, 51, 51, 0.3),
-        rgba(53, 51, 51, 0.3)
-      ),
-      url("/src/assets/83.jpg");
-      
+.friesImg.full-screen {
+  background-position: center;
+  background-attachment: fixed;
+  background-size: cover;
+  background-image: linear-gradient(
+      rgba(53, 51, 51, 0.3),
+      rgba(53, 51, 51, 0.3)
+    ),
+    url('/src/assets/83.jpg');
 }
-.friesImg{
-     min-height: 100vh;
-    display: flex;  
+.friesImg {
+  min-height: 100vh;
+  display: flex;
 }
-.welcome-text{
-    font-size: 15px;
-    color:white;
-    letter-spacing: .5rem;
-    font-weight: lighter;
-    font-size: 0.7rem;
-    
+.container-top{
+  color: white;
+  letter-spacing: 0.5rem;
+  font-weight: lighter;
+  font-size: 1rem;
+  justify-content: center;
+  padding: 7rem;
 }
-.logo-pic{
-    display: block;
-    margin: auto;
-    padding: 3rem;
-    width: 25rem;
+.container-bottom {
+  padding: 7rem;
+  justify-content: center;
+  display: flex;
+  justify-content: space-around;
+ 
+@media (min-width: 700px){
+  padding: 6rem;
 }
-.main-container{
-    display: inline-block;
-    width: 100%;
-    padding: 0 2rem;
-    
-    @media (min-width: 700px) {
-     display: flex;
-     justify-content: stretch;
-     align-items: stretch;
-     width: 100%;
-  
-    }
-  }
-  .left-container{
-  
-    @media (min-width: 700px) {
-      flex: 1 1 50%;
-      width: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-  
-    }
-  }
-  .right-container{
-    
-  
-    @media (min-width: 700px) {
-      flex: 1 1 50%;
-      width: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-    
-  }
-  
+}
 
+.logo-pic {
+  display: block;
+  margin: auto;
+  padding: 3rem;
+  width: 25rem;
+}
+.main-container {
+  display: inline-block;
+  width: 100%;
+  padding: 0 2rem;
+
+  @media (min-width: 700px) {
+    display: flex;
+    justify-content: stretch;
+    align-items: stretch;
+    width: 100%;
+  }
+}
+.left-container {
+  @media (min-width: 700px) {
+    flex: 1 1 50%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+.right-container {
+  @media (min-width: 700px) {
+    flex: 1 1 50%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    display: inline-block;
+    padding: 3rem;
+  }
+}
