--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -12,56 +12,63 @@
   min-height: 100vh;
   display: flex;
 }
-.container-top{
+.container-top {
   color: white;
   letter-spacing: 0.5rem;
-  font-weight: lighter;
+  font-weight: 200;
   font-size: 1rem;
   justify-content: center;
-  padding: 7rem;
+  padding: 2rem;
+
+  @media (min-width: 700px) {
+    padding: 7rem;
+  }
 }
 .container-bottom {
-  padding: 7rem;
   justify-content: center;
   display: flex;
-  justify-content: space-around;
- 
-@media (min-width: 700px){
-  padding: 6rem;
-}
+  justify-content: space-between;
+  padding: 1rem;
+
+
+  @media (min-width: 700px) {
+    padding: 7rem;
+  }
 }
 
 .logo-pic {
   display: block;
   margin: auto;
-  padding: 3rem;
-  width: 25rem;
-}
+
+
 .main-container {
-  display: inline-block;
   width: 100%;
   padding: 0 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 
   @media (min-width: 700px) {
-    display: flex;
+    flex-direction: row;
     justify-content: stretch;
     align-items: stretch;
     width: 100%;
   }
 }
 .left-container {
+  width: 100%;
   @media (min-width: 700px) {
     flex: 1 1 50%;
-    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
   }
 }
 .right-container {
+  width: 100%;
   @media (min-width: 700px) {
     flex: 1 1 50%;
-    width: 100%;
     display: flex;
     align-items: center;
     display: inline-block;
