some hu2 styles, functionality and responsive

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,6 +8,7 @@
 // 3. Components
 @import 'components/burgerImage';
 @import 'components/button';
+@import 'components/container';
 
 // 4. Pages
 @import 'pages/home';
