--- a/src/styles/pages/_waiter.scss
+++ b/src/styles/pages/_waiter.scss
@@ -7,31 +7,30 @@ html {
   justify-content: center;
   letter-spacing: 0.2rem;
 }
-.input-name {
+.first-container {
   display: flex;
   align-items: stretch;
   justify-content: center;
+  font-size: 1rem;
 
-   @media (min-width: 800px) {
+  @media (min-width: 800px) {
     display: flex;
     align-items: stretch;
     justify-content: block;
   }
 }
-.input-number {
-  margin-top: 2rem;
+.second-container {
   display: flex;
   align-items: stretch;
   justify-content: flex-start;
 
-    @media (min-width: 800px) {
+  @media (min-width: 800px) {
     display: flex;
     align-items: stretch;
-    justify-content:block;
+    justify-content: block;
   }
 }
 .name-input {
-  font-size: 0.5rem;
   padding: 0.5rem 1rem;
   border-radius: 5px 5px 5px 5px;
   flex: 1;
@@ -43,7 +42,16 @@ html {
   }
 }
 .select-input {
+  font-size: 1rem;
   background-color: $second-color;
   border: none;
   border-radius: 5px 5px 5px 5px;
+}
+.menu-box{
+    display: flex;
+    justify-content: space-evenly;
+
+}
+.choice-text{
+    
 }
