--- a/src/styles/base/_helpers.scss
+++ b/src/styles/base/_helpers.scss
@@ -7,6 +7,20 @@
   text-align: center;
 }
 
+// Flexbox
+.d-flex {
+  display: flex;
+}
+
+.justify-content-center {
+  justify-content: center;
+}
+
+.align-items-center {
+  align-items: center;
+}
+
+// Spacings
 @mixin margins($break: '') {
   .margin {
     &-all#{if($break != "", -#{$break}, "")} {
