icons fully added!

--- a/src/styles/utils/_utils.scss
+++ b/src/styles/utils/_utils.scss
@@ -16,3 +16,20 @@
     font-size: 1.3rem;
 } 
 
+
+// Flexbox
+.d-flex {
+    display: flex;
+  }
+  
+  .justify-content-center {
+    justify-content: center;
+  }
+  
+  .align-items-center {
+    align-items: center;
+  }
+  
+  .align-items-stretch {
+    align-items: stretch;
+  }
