--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,9 +7,9 @@
 
 // 3. Components
 @import 'components/grid';
-@import 'components/burgerImage';
 @import 'components/button';
 @import 'components/container';
+@import 'components/ordersSelected';
 
 // 4. Pages
 @import 'pages/home';
