--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,6 +10,7 @@
 @import 'components/button';
 @import 'components/container';
 @import 'components/ordersSelected';
+@import 'components/navMenu';
 
 // 4. Pages
 @import 'pages/home';
