--- a/src/styles/components/_navMenu.scss
+++ b/src/styles/components/_navMenu.scss
@@ -1,10 +1,12 @@
 .navigation-bar{
- background-color: white;
+ background-color: $fourth-color;
  box-shadow: 0 -5px 20px 0 rgba(0,0,0,0.1);
 
  nav li {
    cursor: pointer;
    font-weight: 700;
+   letter-spacing: 0.2rem;
+   text-transform: uppercase;
    a {
      text-decoration: none;
      color: black;
