--- a/src/styles/utils/_utils.scss
+++ b/src/styles/utils/_utils.scss
@@ -26,6 +26,10 @@
   justify-content: center;
 }
 
+.justify-content-end {
+  justify-content: flex-end;
+}
+
 .justify-content-space-between {
   justify-content: space-between;
 }
